Title label is automatically update on build (with version, stage and revision).

--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -18,7 +18,7 @@
 <window id="index"
 	use="com.jaeksoft.searchlib.web.controller.IndexController">
 	<caption image="images/oss_16x16_WEB.png"
-		label="Open Search Server 1.1-dev">
+		label="@{index.release}">
 		<toolbarbutton label="Visit the OSS web site" target="_blank"
 			href="http://www.open-search-server.com" />
 		<space width="10px" />
