* All functions was prefixed with oss_ * In the configuration interface, the Engine tab is usable (With or without Ajax) * Moved and deleted useless ressources

--- a/src/php/contrib/cms/spip/squelettes/style.css
+++ b/src/php/contrib/cms/spip/squelettes/style.css
@@ -5,3 +5,7 @@
 .configuration #contenu .cadre.cadre-sous_rub.unavailable .titrem {
 	background-color: #F4B50C;
 }
+
+table.oss_config td input.text {
+	width: 100%;
+}
