2929332: Faceting post collapsing

--- a/WebContent/WEB-INF/zul/query/faceted.zul
+++ b/WebContent/WEB-INF/zul/query/faceted.zul
@@ -22,6 +22,7 @@
 		<columns>
 			<column label="Field" />
 			<column label="Multivalued" />
+			<column label="Post collapsing" />
 			<column label="Minimal count" />
 			<column label="Action" />
 		</columns>
