--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -39,6 +39,7 @@
 				label="Crawler" />
 			<tab id="tabRuntime" visible="@{index.instanceValid}"
 				label="Runtime" />
+			<tab id="tabPrivileges" label="Privileges" />
 		</tabs>
 		<tabpanels>
 			<tabpanel>
@@ -58,6 +59,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabRuntime.onSelect">
 				<include src="WEB-INF/zul/runtime/index.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabPrivileges.onSelect">
+				<include src="WEB-INF/zul/privileges/index.zul" />
 			</tabpanel>
 		</tabpanels>
 	</tabbox>
