- Work in progress with new feature 2883328: Securing access + user rights

--- a/WebContent/WEB-INF/zul/configuration/indices.zul
+++ b/WebContent/WEB-INF/zul/configuration/indices.zul
@@ -1,7 +1,6 @@
-<?init class="org.zkoss.zkplus.databind.AnnotateDataBinderInit" ?>
 <!--
 	License Agreement for Jaeksoft OpenSearchServer
-	Copyright (C) 2008 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of Jaeksoft OpenSearchServer.
 	Jaeksoft OpenSearchServer is free software: you can
