--- a/WebContent/WEB-INF/zul/crawler/web/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/index.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for Jaeksoft OpenSearchServer
-	Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of Jaeksoft OpenSearchServer.
 	Jaeksoft OpenSearchServer is free software: you can
@@ -14,30 +14,34 @@
 	copy of the GNU General Public License along with Jaeksoft OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<tabbox>
-	<tabs>
-		<tab id="tabCrawlerWebPattern" label="Pattern list"
-			selected="true" />
-		<tab id="tabCrawlerWebUrl" label="Url browser" />
-		<tab id="tabCrawlerWebCrawl" label="Crawl process" />
-		<tab id="tabCrawlerWebMapping" label="Field mapping" />
-		<tab id="tabCrawlerWebRobotsTxt" label="Robots.txt" />
-	</tabs>
-	<tabpanels>
-		<tabpanel>
-			<include src="WEB-INF/zul/crawler/web/pattern.zul" />
-		</tabpanel>
-		<tabpanel fulfill="tabCrawlerWebUrl.onSelect">
-			<include src="WEB-INF/zul/crawler/web/url.zul" />
-		</tabpanel>
-		<tabpanel fulfill="tabCrawlerWebCrawl.onSelect">
-			<include src="WEB-INF/zul/crawler/web/crawl.zul" />
-		</tabpanel>
-		<tabpanel fulfill="tabCrawlerWebMapping.onSelect">
-			<include src="WEB-INF/zul/crawler/web/mapping.zul" />
-		</tabpanel>
-		<tabpanel fulfill="tabCrawlerWebRobotsTxt.onSelect">
-			<include src="WEB-INF/zul/crawler/web/robotstxt.zul" />
-		</tabpanel>
-	</tabpanels>
-</tabbox>
+<window id="webcrawler" border="none"
+	use="com.jaeksoft.searchlib.web.controller.crawler.CrawlerController">
+	<tabbox>
+		<tabs>
+			<tab id="tabCrawlerWebPattern" label="Pattern list"
+				selected="true" />
+			<tab id="tabCrawlerWebUrl" label="Url browser" />
+			<tab id="tabCrawlerWebCrawl" label="Crawl process" />
+			<tab id="tabCrawlerWebMapping" label="Field mapping"
+				visible="@{webcrawler.webCrawlerParametersRights}" />
+			<tab id="tabCrawlerWebRobotsTxt" label="Robots.txt" />
+		</tabs>
+		<tabpanels>
+			<tabpanel>
+				<include src="WEB-INF/zul/crawler/web/pattern.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawlerWebUrl.onSelect">
+				<include src="WEB-INF/zul/crawler/web/url.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawlerWebCrawl.onSelect">
+				<include src="WEB-INF/zul/crawler/web/crawl.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawlerWebMapping.onSelect">
+				<include src="WEB-INF/zul/crawler/web/mapping.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawlerWebRobotsTxt.onSelect">
+				<include src="WEB-INF/zul/crawler/web/robotstxt.zul" />
+			</tabpanel>
+		</tabpanels>
+	</tabbox>
+</window>
