--- a/WebContent/WEB-INF/zul/privileges/index.zul
+++ b/WebContent/WEB-INF/zul/privileges/index.zul
@@ -21,7 +21,7 @@
 			<grid>
 				<columns sizable="false">
 					<column align="right" width="100px" />
-					<column align="left" width="200px" />
+					<column align="left" width="300px" />
 					<column align="left" />
 				</columns>
 				<rows>
@@ -54,26 +54,38 @@
 					<row>
 						<label
 							value="Add privileges on following index: " />
-						<hbox>
-							<listbox mold="select"
+						<vbox width="100%">
+							<listbox mold="select" width="100%"
 								selectedItem="@{privileges.selectedIndex}"
 								model="@{privileges.indexList}" />
-							<listbox mold="select"
+							<listbox mold="select" width="100%"
 								selectedItem="@{privileges.selectedRole}"
-								model="@{privileges.roles}" />
-						</hbox>
+								model="@{privileges.roles}">
+								<listitem self="@{each='role'}">
+									<listcell label="@{role.label}" />
+								</listitem>
+							</listbox>
+						</vbox>
 						<button label="Add" forward="onAddPrivilege" />
 					</row>
 				</rows>
 			</grid>
 			<listbox model="@{privileges.user.roles}"
-				itemRenderer="@{privileges}"
 				selectedItem="@{privileges.selectedIndexRole}">
 				<listhead>
 					<listheader label="Index" />
 					<listheader label="Role" />
 					<listheader />
 				</listhead>
+				<listitem self="@{each='indexRole'}">
+					<listcell label="@{indexRole.indexName}" />
+					<listcell label="@{indexRole.role.label}" />
+					<listcell>
+						<button label="remove" onClick="privileges.onRoleRemove(self)">
+							<custom-attributes indexrole="@{indexRole}" />
+						</button>
+					</listcell>
+				</listitem>
 			</listbox>
 			<vbox width="100%" align="right">
 				<hbox visible="@{privileges.selected}">
