- Alert refactorying - New api for index deletion: http://localhost:8080/oss/schema?cmd=deleteindex&index.name=webtest&index.delete.name=webtest - New feature id 2887376: Enhancement for the index page - dropping indexes

--- a/WebContent/WEB-INF/zul/home.zul
+++ b/WebContent/WEB-INF/zul/home.zul
@@ -57,10 +57,13 @@
 		border="normal">
 		<toolbar>
 			<button label="Refresh" forward="onListRefresh" />
+			<space width="20px" />
+			<button label="Erase" forward="onEraseIndex"
+				visible="@{home.selectedIndex}" />
 		</toolbar>
 		<panelchildren>
-			<listbox selectedItem="@{home.clientName}"
-				model="@{home.clientCatalog}" />
+			<listbox id="indexlist" selectedItem="@{home.clientName}"
+				mold="paging" pageSize="20" model="@{home.clientCatalog}" />
 		</panelchildren>
 	</panel>
 
